--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,4 +55,14 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'    
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    // For Google Maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
+    // For Google Location Services
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    // For Google Play Games
+    implementation 'com.google.android.gms:play-services-games:21.0.0'
 }
